[gd_scene load_steps=16 format=3 uid="uid://clk22cgap8uq8"]

[ext_resource type="Script" path="res://resources/sfx/sfx_main.gd" id="1_toby0"]
[ext_resource type="AudioStream" uid="uid://cidkegr88e4kh" path="res://resources/sfx/thump/thump_1.wav" id="2_4wrbv"]
[ext_resource type="AudioStream" uid="uid://bl2hmpf4iw3b0" path="res://resources/sfx/bgm.wav" id="2_g3bfy"]
[ext_resource type="AudioStream" uid="uid://djfg87wiiurrp" path="res://resources/sfx/thump/thump_4.wav" id="3_bymqf"]
[ext_resource type="AudioStream" uid="uid://dot86yf78uv6j" path="res://resources/sfx/thump/thump_6.wav" id="4_capge"]
[ext_resource type="AudioStream" uid="uid://11lqiqyg04xx" path="res://resources/sfx/big_explosion.wav" id="6_wdt8d"]
[ext_resource type="AudioStream" uid="uid://cf3typ0lm8e7s" path="res://resources/sfx/break/metal clang 5.wav" id="7_a0pmg"]
[ext_resource type="AudioStream" uid="uid://d0itsjls2ired" path="res://resources/sfx/break/punch 1.wav" id="8_ll6x4"]
[ext_resource type="AudioStream" uid="uid://xw1a0j10hlj" path="res://resources/sfx/break/punch 2.wav" id="9_hx5mq"]
[ext_resource type="AudioStream" uid="uid://db8fq5jnrbjen" path="res://resources/sfx/break/punch 3.wav" id="10_7cwmw"]
[ext_resource type="AudioStream" uid="uid://bbr1xwgqoqyek" path="res://resources/sfx/break/punch 4.wav" id="11_6h8np"]
[ext_resource type="AudioStream" uid="uid://b5erymayvcqcc" path="res://resources/sfx/land.mp3" id="12_b8e0w"]
[ext_resource type="AudioStream" uid="uid://dl1osiay0wiox" path="res://resources/sfx/bushes 10.wav" id="13_jfb8m"]
[ext_resource type="AudioStream" uid="uid://bltj52um6o1nd" path="res://resources/sfx/catch ball 8.wav" id="14_4lb3r"]
[ext_resource type="AudioStream" uid="uid://do4schnxwr5m2" path="res://resources/sfx/bushes 3.wav" id="14_q78gt"]

[node name="sfx_main" type="Node2D"]
script = ExtResource("1_toby0")

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_g3bfy")
volume_db = -25.0
autoplay = true

[node name="thumps" type="Node2D" parent="."]

[node name="thump" type="AudioStreamPlayer" parent="thumps"]
stream = ExtResource("2_4wrbv")
volume_db = -20.0

[node name="thump2" type="AudioStreamPlayer" parent="thumps"]
stream = ExtResource("3_bymqf")
volume_db = -20.0

[node name="thump3" type="AudioStreamPlayer" parent="thumps"]
stream = ExtResource("4_capge")
volume_db = -20.0

[node name="thump4" type="AudioStreamPlayer" parent="thumps"]
stream = ExtResource("2_4wrbv")
volume_db = -20.0

[node name="thump5" type="AudioStreamPlayer" parent="thumps"]
stream = ExtResource("3_bymqf")
volume_db = -20.0

[node name="thump6" type="AudioStreamPlayer" parent="thumps"]
stream = ExtResource("4_capge")
volume_db = -20.0

[node name="explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wdt8d")
volume_db = -20.0

[node name="ship_break" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_a0pmg")
volume_db = -10.0

[node name="punch0" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ll6x4")
volume_db = -10.0

[node name="punch1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_hx5mq")
volume_db = -10.0

[node name="punch2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_7cwmw")
volume_db = -10.0

[node name="punch3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_6h8np")
volume_db = -10.0

[node name="land_me" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_b8e0w")
volume_db = -20.0

[node name="land_0" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_jfb8m")
volume_db = -20.0

[node name="land_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_q78gt")
volume_db = -20.0

[node name="land_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_4lb3r")
volume_db = -20.0

[connection signal="finished" from="bgm" to="." method="_on_bgm_finished"]
